--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,91 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap");
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+a {
+  text-decoration: underline;
+}
+
 .container {
   max-width: 500px;
   margin: 30px auto;
   overflow: auto;
   min-height: 300px;
-  border: 3px solid lightblue;
+  border: 5px solid black;
   padding: 30px;
   border-radius: 10px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.btn {
+  display: inline-block;
+  background: steelblue;
+  color: #fff;
+  padding: 10px 25px;
+  margin: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+  text-align: center;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.btn:hover {
+  background-color: rgb(36, 92, 138);
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:active {
+  background-color: rgb(36, 92, 138);
+  transform: scale(0.97);
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+.progress {
+  position: relative;
+  height: 5em;
+  margin-bottom: 10px;
+  background-color: lightgray;
+}
+
+.progress span {
+  position: absolute;
+  display: block;
+  width: 100%;
+  font-size: 22px;
+  font-weight: bold;
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+
+footer {
+  margin-top: 30px;
+  text-align: center;
 }
